@@ -2,12 +2,13 @@ package com.batch.GUI.MaterialsWindow;
 
 import com.batch.Database.Entities.Material;
 import com.batch.Database.Repositories.MaterialsRepository;
+import com.batch.Services.LoggingService.MessageLoggingService;
 import com.google.common.collect.Lists;
 import javafx.application.Platform;
 import javafx.collections.ObservableList;
 import javafx.concurrent.Task;
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
+import lombok.Getter;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Controller;
 
@@ -19,21 +20,18 @@ import java.util.stream.Collectors;
 
 @Controller
 public class MaterialsController {
-    private static final Logger log = LogManager.getLogger(MaterialsController.class);
+    @Getter
     private final MaterialsModel model = new MaterialsModel();
     private final MaterialsRepository materialsRepository;
+
+    @Autowired
+    MessageLoggingService log;
 
     public MaterialsController(final MaterialsRepository materialsRepository) {
         this.materialsRepository = materialsRepository;
     }
 
-    public MaterialsModel getModel() {
-        return this.model;
-    }
-
-    @Scheduled(
-            fixedDelay = 1000L
-    )
+    @Scheduled(fixedDelay = 1000L)
     public void update() {
         try {
             if (this.model.getIsShown().getValue()) {
@@ -44,7 +42,7 @@ public class MaterialsController {
                 updateTask.get();
             }
         } catch (Exception e) {
-            log.fatal(e, e);
+            log.logExcption("MaterialsController [Update]", e);
         }
 
     }
@@ -52,7 +50,15 @@ public class MaterialsController {
     private Task<Boolean> updateTask(final Map<Long, Material> dataMap, final List<Material> dataBaseList, final ObservableList<Material> dataList) {
         return new Task<Boolean>() {
             protected Boolean call() throws Exception {
-                dataList.removeAll((Collection) ((ObservableList) dataBaseList.stream().filter((item) -> !dataList.contains(item)).collect(() -> dataList, List::add, List::addAll)).stream().filter((tableListItem) -> dataBaseList.stream().noneMatch((dataBaseItem) -> dataBaseItem.equals(tableListItem))).collect(Collectors.toList()));
+                dataList
+                        .removeAll((dataBaseList
+                                .stream()
+                                .filter((item) -> !dataList.contains(item))
+                                .collect(() -> dataList, List::add, List::addAll))
+                                .stream()
+                                .filter((tableListItem) -> dataBaseList.stream().noneMatch((dataBaseItem) -> dataBaseItem.equals(tableListItem)))
+                                .toList());
+
                 dataList.forEach((tableRecorde) -> {
                     Material databaseRecord = dataMap.get(tableRecorde.getId());
                     tableRecorde.setComment(databaseRecord.getComment());
